intasc7, made background changes

--- a/intasc/intasc4.html
+++ b/intasc/intasc4.html
@@ -53,7 +53,8 @@
                 student researching a topic or technique.</p>
             <p>The artifacts demonstrating my content knowledge are:</p>
             <ol>
-                <li><em>This very website!</em> I teach HTML and this portfolio website was written manually, not with a tool.
+                <li><em>This very website!</em> I teach HTML and this portfolio website was written manually, not with a
+                    tool.
                     I'm teaching it now, Summer 2025, as I'm creating this portfolio. My students are required to create
                     a website as their final project for the quarter, so it's been fun to show them my final project as
                     I'm creating it. My students have access to the source code: <a
@@ -65,20 +66,23 @@
                     care to make the whole site demonstrable of the coding techniques I teach my students in the HTML
                     class. Students have access to the source code: <a href="https://github.com/GaryMalk/CSD112"
                         target="_blank">https://github.com/GaryMalk/CSD112</a></li>
-                <li>History of Computer Science PowerPoint presentation saved as a PDF</li>
-                <li>Programming Loops and Counters PowerPoint presentation saved as a PDF</li>
-                <li>Personal Finance class: Paying for College unit: Paying for College Part I PowerPoint presentation
-                    saved as a PDF</li>
+                <li>History of Computer Science PowerPoint presentation: I give this lecture on the first day of all my
+                    computer science classes (HTML, C#, Java, Algorithms) because it is important for students to
+                    understand where we are in history, the contributions of the pioneers, and what new challenges
+                    their generation will work on. It's also important to see no matter who you are that important
+                    contributions were made by people who look like you.</li>
+                <li>Programming Loops and Counters PowerPoint presentation</li>
+                <li>Personal Finance: Paying for College unit: Paying for College Part I PowerPoint presentation</li>
             </ol>
         </div>
 
         <section class="intasc grid1">
-            <embed src="History of Computer Science.pdf" type="application/pdf" width="1500px" height="800px"
+            <embed src="pdf/History of Computer Science.pdf" type="application/pdf" width="1500px" height="800px"
                 title="Embedded PDF Document">
 
-            <embed src="Loops.pdf" type="application/pdf" width="1500px" height="800px" title="Embedded PDF Document">
+            <embed src="pdf/Loops.pdf" type="application/pdf" width="1500px" height="800px" title="Embedded PDF Document">
 
-            <embed src="Paying for College Part I.pdf" type="application/pdf" width="1500px" height="800px"
+            <embed src="pdf/Paying for College Part I.pdf" type="application/pdf" width="1500px" height="800px"
                 title="Embedded PDF Document">
         </section>
     </section>
