--- a/intasc/intasc5.html
+++ b/intasc/intasc5.html
@@ -52,26 +52,13 @@
                 accessibility guidelines and each page must pass validation. The websites are graded on completeness,
                 appearance, and lack of errors. The students also critique each others's websites. I present their work
                 as artifacts.</p>
-            <p>In Personal Finance, I was the teacher of record for these units:
-                <br>Buying a Car
-                <br>Paying for College
-                <br>Alternatives to 4-year College
-                <br> Budgeting
-            </p>
-            <p>The artifact is a listing from Schoology of all the lessons in those units. While most of the curriculum
-                was from <a href="https://www.ngpf.org/courses/full-year-course/" target="_blank">NextGen Personal
-                    Finance</a>, several lessons in the Paying for College unit were my own based on my own research and
-                experience as a dad. Those lessons were:
-                <br>Deep Dive: Deciding Where to Go to School
-                <br>Choice Projects
-                <br>Deep Dive: Savings Plans and Scholarships
-            </p>
+
             <p>In my Personal Finance class, one of the most salient units was Buying a Car. High school students had no
                 trouble finding this relevant. The artifact I present is a submission from one of the students for the
                 lesson "Research: Find Your Next Car".</p>
         </div>
 
-        <section class="intasc grid3b">
+        <section class="intasc grid2">
             <div class="box intasc" id="projects">
                 <h2 class="left">Final Projects Fall '24:</h2>
                 <br><a href="https://garymalk.github.io/CSD112/bipolar-disorder/BIPOLAR%20DISORDER.html"
@@ -93,7 +80,7 @@
                 <br><a href="https://garymalk.github.io/CSD112/service-hub/home.html" target="_blank">Service Hub</a>
                 <br><a href="https://garymalk.github.io/CSD112/silverstrait" target="_blank">Silverstrait</a>
                 <br><a href="https://garymalk.github.io/CSD112/whistler/index.html" target="_blank">Whistler</a>
-
+                <br>
             </div>
             <div class="box intasc">
                 <h2 class="left">Final Projects Summer '24:</h2>
@@ -109,13 +96,10 @@
                 <br><a href="https://garymalk.github.io/CSD112/ToyotaSupra/index.html" target="_blank">Toyota Supra</a>
                 <br><a href="https://garymalk.github.io/CSD112/Warhammer/Index.html" target="_blank">Warhammer</a>
             </div>
-
-            <embed src="Finance Curriculum.pdf" type="application/pdf" width="550px" height="600px"
-                title="Embedded PDF Document">
         </section>
-
+        <br>
         <section class="intasc grid1">
-            <embed src="RESEARCH - Find Your Next Car.pdf" type="application/pdf" width="1600px" height="900px"
+            <embed src="pdf/RESEARCH - Find Your Next Car.pdf" type="application/pdf" width="1600px" height="900px"
                 title="Embedded PDF Document">
         </section>
     </section>
