--- a/intasc/intasc6.html
+++ b/intasc/intasc6.html
@@ -103,7 +103,7 @@
             <img src="../img/Mud Check 1.png" alt="Mud Check: picture of muddy child">
             <img src="../img/Mud Check 2.png" alt="Mud Check: picture of muddy dog">
 
-            <embed src="Do-Now.pdf" type="application/pdf" width="800px"
+            <embed src="pdf/Do-Now.pdf" type="application/pdf" width="800px"
                 height="600px" title="Embedded PDF Document">
 
             <div>
@@ -220,13 +220,13 @@
                 </ul>
             </div>
 
-            <embed src="History of Computer Science Exit Ticket.pdf" type="application/pdf" width="800px"
+            <embed src="pdf/History of Computer Science Exit Ticket.pdf" type="application/pdf" width="800px"
                 height="800px" title="Embedded PDF Document">
 
-            <embed src="Mock Final.pdf" type="application/pdf" width="800px" height="800px"
+            <embed src="pdf/Mock Final.pdf" type="application/pdf" width="800px" height="800px"
                 title="Embedded PDF Document">
 
-            <embed src="Item Banks.pdf" type="application/pdf" width="800px" height="800px"
+            <embed src="pdf/Item Banks.pdf" type="application/pdf" width="800px" height="800px"
                 title="Embedded PDF Document">
         </section>
         <p></p>
