--- a/intasc/intasc7.html
+++ b/intasc/intasc7.html
@@ -44,8 +44,84 @@
                 learning goals by drawing upon knowledge of content areas, curriculum, cross-disciplinary skills, and
                 pedagogy, as well as knowledge of learners and the community context.</blockquote>
 
-            <p>text needed Instructional Planning.</p>
+            <h2>Reflection</h2>
+            <p>I plan for instruction by considering where we are in the flow of the unit and the course. What
+                background knowledge do we build on from the previous lessons or prerequisite knowledge? What
+                remedial steps will the learner and I take if that knowledge is missing, rusty, or not fully
+                mastered? What are the key learning objectives needed for the upcoming material?</p>
+            <p>Opening class with a "Do Now" assignment has proved valuable. It is a short, open book, open note,
+                open internet low-stakes quiz on material&nbsp;<em>I haven't lectured on yet</em>. It delivers the
+                messages that from the moment we enter the classroom, we are in a learning space and that students
+                are expected to read the textbook first in preparation. They have the chance to correct their
+                answers, so it's not devastating if they haven't. It also gets their minds engaged on the topic from
+                the moment we start, so they are not just lecture spectators.</p>
+            <p>On the first day of some classes, the "Do Now" will be what I call the anthropological part of
+                learning any subject, the "History of..." part. I want students to grasp their place in history and
+                to make a commitment to themselves about how much time they are going to devote to this course.</p>
+            <p>Lesson typically begin with review, going over the main points of the previous lesson. I'll often do
+                this by asking questions to allow the students to state the points. If this class is the second or
+                later in a series of classes, then at least one day of the first week will be spent going through
+                prerequisite lessons at an accellerated rate. I will use the "Fist of Five" or similar technique to
+                see how confident students are. The plan for the day may change dramatically, if needed.</p>
+            <p>I love creating and using PowerPoint lectures. Done right, presentations should include plenty of
+                colorful graphics and animation. They should not be "walls of words". The text should be mostly
+                bullet points. Students know how to read and don't need me to read a presentation to them. With or
+                without presentation graphics, during the lecture I take a formative assessment, such as asking for
+                a "Fist of Five" or taking a "Mud Check", after each key idea as discussed.</p>
+            <p>For coding classes, the lecture usually concludes with a coding demonstration. The code I write is
+                similar to what is required for the assignment, or contains chunks of code that can be copied so it
+                is useful for scaffolding.</p>
+            <p>During the lab portion, I go around the room and check how students are doing and answer questions. I
+                make sure I spend some time sitting with any students with cognitive issues, assisting them with
+                scaffolding and additional instruction.</p>
+            <p>When there is not a coding assignment or if it's not a coding class, there is often an Exit Ticket
+                for students to demonstrate they understood the key concepts and give them a chance for reflection.
+            </p>
         </div>
+
+
+        <section class="grid1">
+            <div class="box intasc title">
+                <h2>Computer Science Lesson Plans</h2>
+            </div>
+            <section class="intasc grid2">
+                <embed src="pdf/History of Computer Science Lesson Plan.pdf" type="application/pdf" width="900px"
+                    height="1000px" title="Embedded PDF Document">
+
+                <embed src="pdf/Loops Lesson Plan.pdf" type="application/pdf" width="900px" height="1000px"
+                    title="Embedded PDF Document">
+            </section>
+
+            <div class="box intasc">
+                <h2>Finance Class Artifacts</h2>
+                <p>In Personal Finance, I was the teacher of record for these units:</p>
+                <ul>
+                    <li>Buying a Car</li>
+                    <li>Paying for College</li>
+                    <li>Alternatives to 4-year College</li>
+                    <li>Budgeting</li>
+                </ul>
+                <p>The artifact is a listing from Schoology of all the lessons in those units. While most of the
+                    curriculum was from <a href="https://www.ngpf.org/courses/full-year-course/" target="_blank">NextGen
+                        Personal Finance</a>, several lessons in the Paying for College unit were my own based on my own
+                    research and experience as a dad. Those lessons were:
+                <ul>
+                    <li>Deep Dive: Deciding Where to Go to School</li>
+                    <li>Choice Projects</li>
+                    <li>Deep Dive: Savings Plans and Scholarships</li>
+                </ul>
+                </p>
+            </div>
+
+            <section class="intasc grid2b">
+                <embed src="pdf/Finance Curriculum.pdf" type="application/pdf" width="650px" height="1000px"
+                    title="Embedded PDF Document">
+
+                <embed src="pdf/Finance Car Buying Lesson Plan.pdf" type="application/pdf" width="1000px" height="1000px"
+                    title="Embedded PDF Document">
+            </section>
+        </section>
+        <br>
     </section>
 </body>
 
