--- a/pages/biography.html
+++ b/pages/biography.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <section class="leaf">
+    <section class="cwusign">
         <nav>
             <div>
                 <a href="../index.html">Home</a>
@@ -21,7 +21,7 @@
                 <div class="subnav">
                     <a href="javascript:void(0);" onclick="showIntasc()" class="subnavbtn">InTASC Standards</a>
                     <div id="subnav-content" class="subnav-content">
-						<a href="../intasc/intasc1.html">1. Learner Development</a>
+                        <a href="../intasc/intasc1.html">1. Learner Development</a>
                         <a href="../intasc/intasc2.html">2. Learning Differences</a>
                         <a href="../intasc/intasc3.html">3. Learning Environments</a>
                         <a href="../intasc/intasc4.html">4. Content Knowledge</a>
@@ -38,66 +38,73 @@
 
         <h1>Education Biography</h1>
 
-        <div class="box">
-            <h2>Career Path Prior to Entering MAT Program</h2>
-            <p>I worked in the software development industry for 26 years prior to entering the MAT program at CWU. I
-                started as a manual tester hired as a contractor to work at Microsoft to test localized software on the
-                Pan-Euro version of Windows 98, due to my fluency in Romanian and ability to speak and read German. My
-                fluency in Romanian came about because I did humanitarian aid work in Romania for six years.</p>
-            <p>I progressed into test lead and test manager roles, learning how to write code for test automation and
-                test tools, and eventually transitioned into software developer in test (SDET) roles. My last software
-                industry position was Principal SDET at Puget Sound Energy.</p>
-            <h2>What Led Me to Pursue Teaching</h2>
-            <p>Most of my training has been on-the-job. In 2018, I decided to go back to school and earn a Bachelor’s
-                degree in Computer Science. This was after 20 years in the industry in senior development roles. I was
-                able to accelerate and graduate in 2020 from Western Governors University (WGU).
-                A lot had changed in higher education since I had been in school 40 years prior. I was inspired by the
-                competency-based learning at WGU. Classes are 100% online, at your own pace. I had a required weekly
-                phone call with my program mentor to verify I was staying on track. Classes are pass/fail and passing is
-                considered at least 3.0.</p>
-            <p>This is revolutionary. What matters in competency-based learning is what you learned by the end of the
-                process, not how well you performed while you were learning. Failing an exam at a traditional school
-                means taking the whole class over again, wasting weeks on the sections you already know. In
-                competency-based learning, you only study the parts you didn’t do well on and take the test again.
-                Self-paced is good both for the highly capable who can accelerate and those needing extra help. More to
-                the point, each individual can accelerate through sections that come easily or are already known and
-                slow down for sections that are more difficult. Competency-based learning is at once democratizing,
-                equitable, and accommodating.</p>
-            <p>I became intrigued with how my own early educational career might have been different. As I studied more,
-                I learned that colleges and high schools are adopting competency-based learning along with “flipped
-                classrooms”, where the students watch recorded lectures at home and come to class to get help with
-                assignments. The instructor role transforms into tutor and curator.
-            <p>More and more, I thought about this being the next act in my life. I’ve had my career. I could now teach
-                and call it retirement. I wanted to be part of what’s changing in education.</p>
-            <h2>My Academic Background</h2>
-            <p>I studied Physics and Psychology at the University of Washington after high school. I also had extensive
-                coursework in Mathematics and Chemistry.</p>
-            <p>While working humanitarian aid overseas, I studied the Management of Voluntary and Non-Profit
-                Organizations
-                through distance learning with Open University in the U.K., completing one year for a Certificate of
-                Management.</p>
-            <p>I am largely self-taught in building computers and computer programming, as mentioned above. I obtained
-                the Microsoft Certified Systems Engineer (MCSE) and Microsoft Certified Systems Administrator (MCSA) for
-                Windows 2000 and became proficient in QA and C# while working in the industry. I later obtained a
-                Bachelor of Science in Computer Science from WGU, as mentioned above.</p>
+        <section class="grid1">
+            <div class="box">
+                <h2>Career Path Prior to Entering MAT Program</h2>
+                <p>I worked in the software development industry for 26 years prior to entering the MAT program at CWU.
+                    I started as a manual tester hired as a contractor to work at Microsoft to test localized software
+                    on the Pan-Euro version of Windows 98, due to my fluency in Romanian and ability to speak and read
+                    German. My fluency in Romanian came about because I did humanitarian aid work in Romania for six
+                    years.</p>
+                <p>I progressed into test lead and test manager roles, learning how to write code for test automation
+                    and test tools, and eventually transitioned into software developer in test (SDET) roles. My last
+                    software industry position was Principal SDET at Puget Sound Energy.</p>
+                <h2>What Led Me to Pursue Teaching</h2>
+                <p>Most of my training has been on-the-job. In 2018, I decided to go back to school and earn a
+                    Bachelor’s degree in Computer Science. This was after 20 years in the industry in senior development
+                    roles. I was able to accelerate and graduate in 2020 from Western Governors University (WGU). A lot
+                    had changed in higher education since I had been in school 40 years prior. I was inspired by the
+                    competency-based learning at WGU. Classes are 100% online, at your own pace. I had a required
+                    weekly phone call with my program mentor to verify I was staying on track. Classes are pass/fail and
+                    passing is considered at least 3.0.</p>
+                <p>This is revolutionary. What matters in competency-based learning is what you learned by the end of
+                    the process, not how well you performed while you were learning. Failing an exam at a traditional
+                    school
+                    means taking the whole class over again, wasting weeks on the sections you already know. In
+                    competency-based learning, you only study the parts you didn’t do well on and take the test again.
+                    Self-paced is good both for the highly capable who can accelerate and those needing extra help. More
+                    to the point, each individual can accelerate through sections that come easily or are already known
+                    and
+                    slow down for sections that are more difficult. Competency-based learning is at once democratizing,
+                    equitable, and accommodating.</p>
+                <p>I became intrigued with how my own early educational career might have been different. As I studied
+                    more, I learned that colleges and high schools are adopting competency-based learning along with
+                    “flipped classrooms”, where the students watch recorded lectures at home and come to class to get
+                    help with assignments. The instructor role transforms into tutor and curator.
+                <p>More and more, I thought about this being the next act in my life. I’ve had my career. I could now
+                    teach and call it retirement. I wanted to be part of what’s changing in education.</p>
+                <h2>My Academic Background</h2>
+                <p>I studied Physics and Psychology at the University of Washington after high school. I also had
+                    extensive coursework in Mathematics and Chemistry.</p>
+                <p>While working humanitarian aid overseas, I studied the Management of Voluntary and Non-Profit
+                    Organizations through distance learning with Open University in the U.K., completing one year for a
+                    Certificate of Management.</p>
+                <p>I am largely self-taught in building computers and computer programming, as mentioned above. I
+                    obtained the Microsoft Certified Systems Engineer (MCSE) and Microsoft Certified Systems
+                    Administrator (MCSA) for Windows 2000 and became proficient in QA and C# while working in the
+                    industry. I later obtained a Bachelor of Science in Computer Science from WGU, as mentioned above.
+                </p>
 
-            <h2>Professional Training</h2>
-            <p>The most significant training I’ve enrolled in as an educator is the Masters of Arts in Teaching (MAT)
-                with Central Washington University, starting June 2024, with a teaching certificate endorsed in Computer
-                Science and Mathematics anticipated in June 2025 and the masters completion anticipated in August 2025.
-            </p>
-            <p>In July 2024, I attended a week-long seminar for Computer Science professors held by the National IT
-                Innovation Center (NITIC), called Summer Working Connections. I was enrolled in the Cyber Buffet track,
-                which was training in teaching Cyber Security topics.</p>
-            <p>In August 2024, I attended a one-evening training in pedagogy held by Northwest University for its
-                faculty.</p>
-            <h2>Teaching Experience</h2>
-            <p>I’m currently adjunct faculty at Lake Washington Institute of Technology, where I have taught since April
-                2024. I teach classes in Java, Python, Html with CSS, and Data Structures and Algorithms.
-                For Fall Semester 2024, I also taught as adjunct Professional Software Engineering at Northwest
-                University, a class I developed for them based on my industry experience.</p>
-
-        </div>
+                <h2>Professional Training</h2>
+                <p>The most significant training I’ve enrolled in as an educator is the Masters of Arts in Teaching
+                    (MAT) with Central Washington University, starting June 2024, with a teaching certificate endorsed
+                    in
+                    Computer Science and Mathematics anticipated in June 2025 and the masters completion anticipated in
+                    August
+                    2025.
+                </p>
+                <p>In July 2024, I attended a week-long seminar for Computer Science professors held by the National IT
+                    Innovation Center (NITIC), called Summer Working Connections. I was enrolled in the Cyber Buffet
+                    track, which was training in teaching Cyber Security topics.</p>
+                <p>In August 2024, I attended a one-evening training in pedagogy held by Northwest University for its
+                    faculty.</p>
+                <h2>Teaching Experience</h2>
+                <p>I’m currently adjunct faculty at Lake Washington Institute of Technology, where I have taught since
+                    April 2024. I teach classes in Java, Python, Html with CSS, and Data Structures and Algorithms.
+                    For Fall Semester 2024, I also taught as adjunct Professional Software Engineering at Northwest
+                    University, a class I developed for them based on my industry experience.</p>
+            </div>
+        </section>
         <p></p>
     </section>
 </body>
