--- a/intasc/intasc2.html
+++ b/intasc/intasc2.html
@@ -125,7 +125,7 @@
                     </ul>
                 </div>
                 <img src="../img/FAFSA.png" alt="screenshot submitted by a student to show FAFSA was completed">
-                <embed src="trade school.pdf" type="application/pdf" width="100%" height="1000px"
+                <embed src="pdf/trade school.pdf" type="application/pdf" width="100%" height="1000px"
                     title="Embedded PDF Document">
             </div>
 
