--- a/intasc/intasc3.html
+++ b/intasc/intasc3.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <section class="school leaf intasc">
+    <section class="school cwusign intasc">
         <nav>
             <div>
                 <a href="../index.html">Home</a>
@@ -55,7 +55,9 @@
                     cohort icebreaker last summer.</li>
                 <li>History of Computer Science discussion questions. Students counted off into four groups by
                     powers of 2 (2, 4, 8, 16 - hey, it's computer science class). Groups met after a PowerPoint
-                    presentation to discuss their answers. Artifacts are three example student submissions.</li>
+                    presentation to discuss their answers. An example of things overheard from the groups: "I didn't
+                    know that almost all programmers used to be women, and now we're in the minority." Artifacts are
+                    three example student submissions.</li>
                 <li>Personal Finance class: Paying for College Unit: lesson on FAFSA: "ANALYZE: A FAFSA Submission
                     Summary" assignment made available in English and Spanish. A sizeable number of the students in
                     that class were Hispanic.</li>
@@ -67,11 +69,10 @@
         </div>
 
         <section class="intasc grid2">
-
-            <embed src="Human Bingo.pdf" type="application/pdf" width="800px" height="1000px"
+            <embed src="pdf/Human Bingo.pdf" type="application/pdf" width="800px" height="1000px"
                 title="Embedded PDF Document">
 
-            <embed src="History of Computer Science Group Discussion Questions.pdf" type="application/pdf" width="800px"
+            <embed src="pdf/History of Computer Science Group Discussion Questions.pdf" type="application/pdf" width="800px"
                 height="1000px" title="Embedded PDF Document">
 
             <iframe src="https://docs.google.com/document/d/1vZ_wLhk6d91G0dWjN1TxRIoiOxVg-4N5ETtPT69OrGw/edit?tab=t.0"
@@ -82,10 +83,11 @@
                 width="800px" height="1000px" allowfullscreen></iframe>
         </section>
 
-
+        <section class="intasc grid1">
         <iframe
             src="https://docs.google.com/spreadsheets/d/1YZTxqNx6rswe41J9zWqH-Qm2-k6Q6pDpUU9mFVk7wSk/edit?usp=sharing"
             width="1200" height="800" allowfullscreen></iframe>
+        </section>
     </section>
 </body>
 
