--- a/intasc/intasc8.html
+++ b/intasc/intasc8.html
@@ -44,8 +44,60 @@
                 encourage learners to develop deep understanding of content areas and their connections, and to build
                 skills to apply knowledge in meaningful ways.</blockquote>
 
-            <p>text needed Instructional Strategies.</p>
+            <p>The objective in computer programming classes is to teach students how to write code, so coding
+                demonstrations and coding assignments will always be high on the list of strategies. But there are many
+                strategies I use to transmit a concept and many modalities of giving instruction.</p>
+            <p>My classes have assigned reading and assigned videos. I use short, easy-to-understand videos that
+                highlight the concept without getting too deep into implementation details so I recommend students start
+                there. I present an example video from YouTube as an artifact.</p>
+            <p>I do enjoy doing stand-up lectures with presentation graphics. Done right, presentations should include
+                plenty of colorful graphics and animation. They should not be "walls of words". The text should be
+                mostly bullet points. Students know how to read and don't need me to read a presentation to them. With
+                or without presentation graphics, during the lecture I take a formative assessment, such as asking for a
+                "Fist of Five" or taking a "Mud Check", after each key idea as discussed. My artifact of this is the
+                Intro to Algorithms presentation.</p>
+            <p>Coding assignments can also be fun. The artifact Palindrome Detection assignment is both fun and
+                humorous, and it teaches students a bit about history, too.</p>
+            <p>But my favorite prop is my set of number cards. The cards are simply thick posterboard from the dollar
+                store cut into quarters. On one side, a number is written in black. On the other side, binary numbers
+                "1" or "0" are written in red. I use the red side to teach binary number conversion and the black side
+                to teach sorting algorithms and hash table algorithms. The lesson plans for binary numbers and sorting
+                are presented below, as are photos of the cards and of students holding them.</p>
+            <p>For binary numbers, I divide the class into two teams, and each team sends up four students per turn.
+                Each student gets a "0" card and a "1" card, one of which they should choose to hold up, and the
+                students stand in a row. I give them a decimal number and we see which team can convert it to binary
+                first. Some students catch on sooner, but that's great because they help their teammates know which
+                number they should be holding. After several iterations, a winning side is declared (actually, it was a
+                tie!) and then we have the "all-star round". Both teams pick their top four players, but now instead of
+                competing to convert 4-bit numbers, they are cooperating to convert a combined 8-bit number.</p>
+            <p>Similarly, for sorting I have the students stand in a row with the cards in random order. After learning
+                about a sorting algorithm, they have to sort themselves using that algorithm. It's a fun way to
+                physically understand how the sorting algorithms work.</p>
         </div>
+
+        <section class="intasc grid1">
+            <iframe width="1120" height="730" src="https://www.youtube.com/embed/g06hNBhoS1k?si=zVrcWAtdn7obY6W2"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </section>
+
+        <section class="intasc grid2">
+            <embed src="pdf/Intro to Algorithms.pdf" type="application/pdf" width="1000px" height="1000px"
+                title="Embedded PDF Document">
+
+            <embed src="pdf/Palindrome Detection Project.pdf" type="application/pdf" width="800px" height="1000px"
+                title="Embedded PDF Document">
+
+            <embed src="pdf/Binary Numbers Lessson Plan.pdf" type="application/pdf" width="950px" height="1000px"
+                title="Embedded PDF Document">
+
+            <embed src="pdf/Sorting Assignment.pdf" type="application/pdf" width="800px" height="1000px"
+                title="Embedded PDF Document">
+
+            <img src="../img/cards.jpg" alt="large cards with numbers written on them">
+            <img src="../img/Students Sorting.webp" alt="students holding cards standing in a line">
+        </section>
     </section>
 </body>
 
