--- a/pages/resume.html
+++ b/pages/resume.html
@@ -22,7 +22,7 @@
                 <div class="subnav">
                     <a href="javascript:void(0);" onclick="showIntasc()" class="subnavbtn">InTASC Standards</a>
                     <div id="subnav-content" class="subnav-content">
-						<a href="../intasc/intasc1.html">1. Learner Development</a>
+                        <a href="../intasc/intasc1.html">1. Learner Development</a>
                         <a href="../intasc/intasc2.html">2. Learning Differences</a>
                         <a href="../intasc/intasc3.html">3. Learning Environments</a>
                         <a href="../intasc/intasc4.html">4. Content Knowledge</a>
@@ -38,13 +38,11 @@
         </nav>
 
         <h1>Resume</h1>
-
-        <div class="box pdf">
-
-            <embed src="Gary S Malkasian.pdf" type="application/pdf" width="100%" height="1000px"
+        <section class="grid1">
+            <embed src="Gary S Malkasian.pdf" type="application/pdf" width="1000px" height="1000px"
                 title="Embedded PDF Document">
+        </section>
 
-        </div>
         <p></p>
     </section>
 </body>
