--- a/intasc/intasc9.html
+++ b/intasc/intasc9.html
@@ -45,8 +45,32 @@
                 (learners, families, other professionals, and the community), and adapts practice to meet the needs of
                 each learner.</blockquote>
 
-            <p>text needed Prof. Learning & Ethical Practice.</p>
+            <p>The essence of this standard is continuous improvement: on-going self-reflection, seeking out feedback
+                and constructive feedback, being dedicated to on-going development of my skills as a teacher and in my
+                content areas of computer science and mathematics, and keeping abreast of new developments. I also want
+                to be sensitive in my interactions in our community of learners, both with students and teachers, and to
+                adapt my methods to meet the needs of others.</p>
+            <p>My artifacts for this are:</p>
+            <ul>
+                <li>My Professional Growth Plan, which I shared with my host-school mentor and with my field supervisor.
+                    Areas identified for growth were aligned with Learner Development. I am particularly interested in
+                    ELL students and how I can better meet their needs. In computer science and mathematics are
+                    international; there are many learning resources that can help on the internet. Mathematics and
+                    computer programming are both in a real sense languages, so the ELL has skills to draw on to do
+                    that. I want to learn better how to assist that process. I also want to continually keep my own
+                    technical skills up to date.</li>
+                <li>National IT Innovation Center (NITIC) Summer 2024 Working Connections: Cyber Buffet Certificate of
+                    Completion. This was a week-long seminar for college computer science instructors. The track I
+                    attended was Cyber Buffet, where we learned how to detect and combat computer viruses. The class
+                    provided tools to use for developing our own classes to teach it.</li>
+            </ul>
         </div>
+        <section class="intasc grid2">
+            <embed src="pdf/WorkingConnectionscert20250426-27-fwpe6u.pdf" type="application/pdf" width="800px"
+                height="600px" title="Embedded PDF Document">
+            <embed src="pdf/Malkasian PGP program completion_2024.pdf" type="application/pdf" width="800px"
+                height="1000px" title="Embedded PDF Document">
+        </section>
     </section>
 </body>
 
